[gd_scene load_steps=11 format=3 uid="uid://c2o8tdtpcqsbb"]

[ext_resource type="Script" uid="uid://dlph8i25t6tyd" path="res://scenes/world/world_3d.gd" id="1_d5rq0"]
[ext_resource type="PackedScene" uid="uid://dkl3lq1qfby3p" path="res://scenes/world/slime_manager.tscn" id="2_xd1ql"]
[ext_resource type="Environment" uid="uid://bqkr5wdp86m68" path="res://assets/Terrain Data/WorldENV.tres" id="3_6ng0t"]
[ext_resource type="PackedScene" uid="uid://bkw66y13utj24" path="res://scenes/player_character/player_character_3d.tscn" id="7_xihs3"]
[ext_resource type="PackedScene" uid="uid://t2e0c1vjuiws" path="res://scenes/world/delivery_area_3d.tscn" id="12_mchqb"]
[ext_resource type="PackedScene" uid="uid://i860ela8t0qg" path="res://scenes/world/water_slime_spawner.tscn" id="14_wc6xc"]
[ext_resource type="PackedScene" uid="uid://g8bm0p3pcnvc" path="res://scenes/world/rock_slime_spawner.tscn" id="15_6ng0t"]
[ext_resource type="PackedScene" uid="uid://yaml4wqvwlll" path="res://scenes/world/fire_slime_spawner.tscn" id="16_k68x3"]
[ext_resource type="PackedScene" uid="uid://c4n16qg5j5o3c" path="res://scenes/world/vine_slime_spawner.tscn" id="17_6ng0t"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_v17g1"]
data = PackedVector3Array(-41, -16, 41, 41, -16, 41, 41, -16, -41, 41, 16, 41, 41, 16, -41, 41, -16, -41, 41, 16, -41, 41, 16, 41, -41, 16, -41, 41, -16, -41, 41, 16, -41, -41, 16, -41, 41, -16, 41, 41, 16, 41, 41, -16, -41, 41, 16, 41, 41, -16, 41, -41, -16, 41, -41, -16, 41, -41, -16, -41, -41, 16, -41, -41, 16, -41, 41, 16, 41, -41, 16, 41, -41, 16, 41, 41, 16, 41, -41, -16, 41, -41, 16, -41, -41, 16, 41, -41, -16, 41, 41, -16, -41, -41, 16, -41, -41, -16, -41, -41, -16, 41, 41, -16, -41, -41, -16, -41, -40, -15, 40, 40, 15, 40, -40, 15, 40, -40, 15, 40, 40, 15, 40, -40, 15, -40, -40, -15, 40, -40, 15, 40, -40, 15, -40, 40, -15, -40, 40, -15, 40, -40, -15, 40, -40, -15, -40, -40, 15, -40, 40, -15, -40, -40, -15, 40, 40, -15, 40, 40, 15, 40, 40, -15, -40, 40, 15, 40, 40, -15, 40, -40, 15, -40, 40, 15, -40, 40, -15, -40, -40, -15, -40, 40, -15, -40, -40, -15, 40, -40, 15, -40, 40, 15, 40, 40, 15, -40, 40, -15, -40, 40, 15, -40, 40, 15, 40, -40, 15, -40, -40, -15, -40, -40, -15, 40)

[node name="World3D" type="Node3D"]
script = ExtResource("1_d5rq0")

[node name="SlimeManager" parent="." node_paths=PackedStringArray("slime_spawners") instance=ExtResource("2_xd1ql")]
slime_spawners = [NodePath("../WaterSlimeSpawner"), NodePath("../RockSlimeSpawner"), NodePath("../FireSlimeSpawner"), NodePath("../VineSlimeSpawner")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.838285, -0.545191, -0.00673017, 0.436304, -0.678161, 0.591385, -0.326982, 0.492813, 0.806361, 0, 0, 0)
light_color = Color(0.883496, 0.770237, 0.44655, 1)
light_energy = 1.323
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_6ng0t")

[node name="PlayerCharacter3D" parent="." instance=ExtResource("7_xihs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, -26.1289)

[node name="DeliveryArea3D" parent="." instance=ExtResource("12_mchqb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -5.3409, -1)

[node name="DeliveryDelayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WaterSlimeSpawner" parent="." instance=ExtResource("14_wc6xc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 33, -2, -29)

[node name="RockSlimeSpawner" parent="." instance=ExtResource("15_6ng0t")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 34, -2, 37)

[node name="FireSlimeSpawner" parent="." instance=ExtResource("16_k68x3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -30, -2, -30)

[node name="VineSlimeSpawner" parent="." instance=ExtResource("17_6ng0t")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -29, -2, 36)

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 3.469)
size = Vector3(82, 32, 82)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGBox3D"]
operation = 2
size = Vector3(80, 30, 80)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CSGBakedCollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 3.469)
shape = SubResource("ConcavePolygonShape3D_v17g1")

[connection signal="timeout" from="DeliveryDelayTimer" to="." method="_on_delivery_delay_timer_timeout"]
